[metadata]
name = napari-ui-tracer
version = 0.0.1
description = A plugin to help understand Napari UI components and check their source code definition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dalthviz/napari-ui-tracer
author = Daniel Althviz
author_email = dalthviz@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/dalthviz/napari-ui-tracer/issues
    Documentation = https://github.com/dalthviz/napari-ui-tracer#README.md
    Source Code = https://github.com/dalthviz/napari-ui-tracer
    User Support = https://github.com/dalthviz/napari-ui-tracer/issues

[options]
packages = find:
install_requires =
    qtpy>=2.3.0

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ui-tracer = napari_ui_tracer:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
pyqt5 =
    pyqt5
pre-commit =
    pre-commit

[options.package_data]
* = *.yaml
